# opencv

./: .gitignore  CMakeLists.txt  README.md  hist.h  main.cpp  main_procrustes.cpp  procrustes.cpp  procrustes.py  setup.sh  test.cpp  test_linalg.cpp
notebook/: procrustes.ipynb
notebook/.ipynb_checkpoints/: procrustes-checkpoint.ipynb
test/: mat.cpp
